--- a/reservations/templates/home.html
+++ b/reservations/templates/home.html
@@ -1,5 +1,6 @@
 {% include 'base.html' %}
-<body>
+<!-- test -->
+<body> 
     <nav class="navbar navbar-expand-lg  navbar navbar-light" style="background-color: gray;">
         <div class="container">
           <a class="navbar-brand" href="#">
