--- a/reservations/templates/home.html
+++ b/reservations/templates/home.html
@@ -1,5 +1,7 @@
+{% load static %}
 {% include 'base.html' %}
-<!-- test -->
+
+<link rel="stylesheet" href="{% static 'style.css' %}" />
 <body> 
     <nav class="navbar navbar-expand-lg  navbar navbar-light" style="background-color: gray;">
         <div class="container">
@@ -31,7 +33,7 @@
                   <a class="nav-link" href="{% url 'login' %}">Se connecter</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'home' %}">S'inscrire</a>
+                  <a class="nav-link" href="{% url 'signup' %}">S'inscrire</a>
                 </li>
               {% endif %}
             </ul>
@@ -54,7 +56,7 @@
           {% endfor %}
         </ul>
         {% else %}
-        <p style="text-align: center;">Pas de réservations disponibles</p>
+        <p class="center">Pas de réservations disponibles</p>
         {% endif %}
       </main>      
 </body>
