--- a/reservations/templates/login.html
+++ b/reservations/templates/login.html
@@ -9,11 +9,11 @@
           <div class="alert alert-danger">{{ error }}</div>
           {% endif %} {% if request.GET.next %}
           <div class="alert alert-warning">
-            You need to be logged in order to access this page.
+            Cette page est indisponible.
           </div>
           {% endif %}
           <div class="form-group">
-            <label for="username">Username</label>
+            <label for="username">Username :</label>
             <input
               type="text"
               class="form-control"
@@ -23,7 +23,7 @@
             />
           </div>
           <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password">Password :</label>
             <input
               type="password"
               class="form-control"
@@ -31,16 +31,18 @@
               id="password"
               required
             />
-          </div>
+      <div class="close">
           <button type="submit" class="btn btn-primary btn-block">
             Se connecter
           </button>
         </form>
         <button
-          class="btn btn-secondary btn-block mt-3"
-          onclick="window.location.href = '/reservations/signup';"
-        >
+          class="btn btn-secondary btn-block"
+          onclick="window.location.href = '/reservations/signup';">
           S'inscrire
+        </button>
+        <button class="btn btn-danger btn-md" onclick="window.location.href = '/reservations/home';">
+          Retour
         </button>
       </div>
     </div>
