--- a/reservations/templates/home.html
+++ b/reservations/templates/home.html
@@ -1,45 +1,7 @@
-{% load static %}
 {% include 'base.html' %}
 
-<link rel="stylesheet" href="{% static 'style.css' %}" />
 <body> 
-    <nav class="navbar navbar-expand-lg  navbar navbar-light" style="background-color: gray;">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <div>
-              <a href="{% url 'home' %}">
-                <img src="../assets/images/logo.png">
-              </a>
-            </div>
-            <a class="navbar-brand" href="{% url 'home' %}"></a>
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Accueil</a>
-              </li>
-              {% if  user.is_authenticated %}
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'home' %}">Mes réservations</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'login' %}">Se déconnecter</a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'login' %}">Se connecter</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'signup' %}">S'inscrire</a>
-                </li>
-              {% endif %}
-            </ul>
-          </div>
-        </div>
-      </nav>
+    {% include 'navbar.html' %}
       <main>
         {% if reservations %}
         <h2>Réservations disponibles</h2>
@@ -56,7 +18,7 @@
           {% endfor %}
         </ul>
         {% else %}
-        <p class="center">Pas de réservations disponibles</p>
+        <p style="text-align: center;">Pas de réservations disponibles</p>
         {% endif %}
       </main>      
 </body>
