--- a/reservations/templates/login.html
+++ b/reservations/templates/login.html
@@ -38,7 +38,7 @@
         </form>
         <button
           class="btn btn-secondary btn-block"
-          onclick="window.location.href = '/reservations/signup';">
+          onclick="window.location.href = '/reservations/account_type';">
           S'inscrire
         </button>
         <button class="btn btn-danger btn-md" onclick="window.location.href = '/reservations/home';">
