--- a/reservations/templates/navbar.html
+++ b/reservations/templates/navbar.html
@@ -52,9 +52,8 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="{% url 'signup' %}"
-            >S'inscrire</a
-          >
+          <a class="nav-link text-white" href="{% url 'account_type' %}"
+            >S'inscrire</a>
         </li>
         {% endif %}
       </ul>
