--- a/reservations/templates/navbar.html
+++ b/reservations/templates/navbar.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load auth_extras %}
 
 <nav
   class="navbar navbar-expand-lg navbar navbar-light"
@@ -13,17 +14,6 @@
       </div>
       <a class="navbar-brand" href="{% url 'home' %}"></a>
     </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
@@ -34,7 +24,7 @@
             >Accueil</a
           >
         </li>
-        {% if user.is_authenticated %}
+        {% if request.user|has_group:"User" and user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link text-white" href="{% url 'home' %}"
             >Mes réservations</a
@@ -44,6 +34,15 @@
           <a class="nav-link text-white" href="{% url 'signout' %}"
             >Se déconnecter</a
           >
+        </li>
+        {% elif request.user|has_group:"Ecole" and user.is_authenticated %}
+          <a class="nav-link text-white" href="{% url 'home' %}"
+            >Consulter les réservations</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="{% url 'signout' %}"
+            >Se déconnecter</a>
         </li>
         {% else %}
         <li class="nav-item">
